--- a/ui/index.html
+++ b/ui/index.html
@@ -4,12 +4,15 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div id="menu-head">
+            Hello. This is my MEnu header
+        </div>
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am your webapp.
+            Hi! I am your webapp
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
