--- a/ui/index.html
+++ b/ui/index.html
@@ -4,12 +4,12 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div id="menu-head">
+        <div id="menu-head"> <img src="/ui/madi.png" class="img-medium"/>
             Hello. This is my MEnu header
             <hr>
         </div>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+           
         </div>
         <br>
         <div class="center text-big bold">
