--- a/ui/index.html
+++ b/ui/index.html
@@ -4,8 +4,13 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div id="menu-head"> <img src="/ui/madi.png" class="img-medium"/>
-            Hello. This is my MEnu header
+        <div id="menu-head"> 
+            <div id="first-menu">
+                <img src="/ui/madi.png" class="img-medium"/>
+            </div>
+            <div id='second-menu'>
+               Welcome to My App
+            </div>           
             <hr>
         </div>
         <div class="center">
