[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <div id="first-menu">
                 <img src="/ui/madi.png" class="img-medium"/>
             </div>
-            <div id='second-menu'>
+            <div id='second-menu' class="center">
                Welcome to My App
             </div>           
             <hr>
