[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <div id="first-menu">
                 <img src="/ui/madi.png" class="img-medium"/>
             </div>
-            <div id='second-menu' class="center">
+            <div id='second-menu' class="center text-big bold">
                Welcome to My App
             </div>           
             <hr>
@@ -17,7 +17,7 @@
            
         </div>
         <br>
-        <div class="center text-big bold">
+        <div class="center ">
             Hi! I am your webapp
         </div>
         <script type="text/javascript" src="/ui/main.js">
