[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,11 +5,12 @@
     </head>
     <body>
         <div id="menu-head"> 
-            <div id="first-menu">
-                <img src="/ui/madi.png" class="img-medium"/>
+            <div id="first-menu"  class="center text-big bold">
+                 Welcome to My App
             </div>
-            <div id='second-menu' class="center text-big bold">
-               Welcome to My App
+            <div id='second-menu'>
+                <img src="/ui/madi.png" class="img-medium"/>
+              
             </div>           
             <hr>
         </div>
